Fix horizontal scroll in mobile

--- a/src/style.css
+++ b/src/style.css
@@ -19,13 +19,14 @@ body {
     }
 
     .burger-menu-bar {
+        box-sizing: border-box;
         display: flex;
-        padding: 16px 4px;
+        padding: 16px 8px;
         justify-content: space-between;
         text-decoration: none;
         list-style-type: none;
         width: 100%;
-        margin: auto 8px;
+        margin: auto;
         font-size: 16px;
         font-weight: 600;
     }
@@ -51,7 +52,7 @@ body {
 
     .burger-menu-bar img {
         width: 160px;
-        margin: 0 16px;
+        padding: 0 16px;
     }
 
 
@@ -114,7 +115,7 @@ body {
 
     .cta button {
         border: solid 1px black;
-        width: 240px;
+        width: 40%;
         padding: 8px 24px;
         border-radius: 8px;
     }
